<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:paddingTop="16dp" android:paddingBottom="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
            android:id="@+id/main_internal_delivery_time"
            android:text="@string/delivery_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:textStyle="bold" android:textColor="@color/colorBlack"
            android:layout_toLeftOf="@+id/main_internal_info_button"
            android:layout_toStartOf="@+id/main_internal_info_button"/>
    <TextView
            android:id="@+id/main_internal_church_name"
            android:text="@string/church_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_internal_delivery_time" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_toLeftOf="@+id/main_internal_info_button"
            android:layout_toStartOf="@+id/main_internal_info_button"/>
    <Button
            android:background="@drawable/selector_button_1"
            android:textColor="@drawable/selector_text_2"
            android:id="@+id/main_internal_info_button"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_alignTop="@+id/main_internal_done_button" android:layout_toLeftOf="@+id/main_internal_done_button"/>
    <Button
            android:background="@drawable/button3"
            android:textColor="@drawable/selector_text_1"
            android:id="@+id/main_internal_done_button"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_width="90sp"
            android:layout_height="32sp"
            android:text="@string/done"
            android:layout_alignParentTop="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp" android:textSize="16sp"/>
</RelativeLayout>